Update to reflect latest book and links to articles.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,21 +7,20 @@
 								<section class="6u">
 									<h3>Authors</h3>
 									<ul class="links">
-										<li><a href="https://www.thoughtworks.com/profiles/rebecca-parsons">Rebecca Parsons</a></li>
 										<li><a href="http://nealford.com/">Neal Ford</a></li>
+										<li><a href="https://www.thoughtworks.com/profiles/rebecca-parsons">Rebecca Parsons</a></li>
 										<li><a href="https://www.thekua.com/atwork">Patrick Kua</a></li>
 									</ul>
 								</section>
 								<section class="6u">
 									<h3>More Links</h3>
 									<ul class="links">
-										<li><a href="#">Still to come</a></li>
+										<li><a href="http://shop.oreilly.com/product/0636920080237.do">Buy the book</a></li>
 									</ul>
 								</section>
 							</div>
 						</div>
 						<section class="6u">
-							<h3>More to come</h3>
 
 						</section>
 					</div>
@@ -31,7 +30,7 @@
 				<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy; 2016 All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li> Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+							<li>&copy; 2017 All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li> Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
 						</ul>
 					</div>
 
