--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 -->
 <html>
 	<head>
-		<title>Evolutionary Architecture</title>
+		<title>Building Evolutionary Architectures</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -26,7 +26,7 @@
 			<div id="header">
 						
 				<!-- Logo -->
-					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Evolutionary Architecture <em>by Rebecca Parsons, Neal Ford and Patrick Kua</em></a></h1>
+					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Building Evolutionary Architectures <em>by Neal Ford, Rebecca Parsons and Patrick Kua</em></a></h1>
 				
 				<!-- Nav -->
 					<nav id="nav">
