--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,10 +24,10 @@
 
 		<!-- Header -->
 			<div id="header">
-						
+
 				<!-- Logo -->
 					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Building Evolutionary Architectures <em>by Neal Ford, Rebecca Parsons and Patrick Kua</em></a></h1>
-				
+
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
@@ -35,7 +35,7 @@
 							<li {% if current[1] == 'index.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li>
 							<li {% if current[1] == 'blog' %}class="current"{% endif %}><a href="{{ site.baseurl }}/blog">Blog</a></li>
 							<li {% if current[1] == 'talks' %}class="current"{% endif %}><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
-							<li {% if current[1] == 'about-thebook.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/about-thebook.html">The Book</a></li>
+							<li><a href="http://shop.oreilly.com/product/0636920080237.do">The Book</a></li>
 						</ul>
 					</nav>
 
