Add in link to errata

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,7 @@
 									<h3>More Links</h3>
 									<ul class="links">
 										<li><a href="http://shop.oreilly.com/product/0636920080237.do">Buy the book</a></li>
+										<li><a href="http://www.oreilly.com/catalog/errata.csp?isbn=0636920080237">Errata</a></li>
 									</ul>
 								</section>
 							</div>
