--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,7 @@
 							<li {% if current[1] == 'index.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li>
 							<li {% if current[1] == 'blog' %}class="current"{% endif %}><a href="{{ site.baseurl }}/blog">Blog</a></li>
 							<li {% if current[1] == 'talks' %}class="current"{% endif %}><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
+							<li><a href="{{ site.url }}/ffkatas/index.html">Fitness Function Katas</a></li>
 							<li><a href="http://shop.oreilly.com/product/0636920080237.do">The Book</a></li>
 						</ul>
 					</nav>
