--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 			<div id="header">
 
 				<!-- Logo -->
-					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Building Evolutionary Architectures <em>by Neal Ford, Rebecca Parsons and Patrick Kua</em></a></h1>
+					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Building Evolutionary Architectures</em></a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
