--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 						<ul>
 							{% assign current = page.url | downcase | split: '/' %}
 							<li {% if current[1] == 'index.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li>
-							<li {% if current[1] == 'blog' %}class="current"{% endif %}><a href="{{ site.baseurl }}/blog">Blog</a></li>
+							<li {% if current[1] == 'resources' %}class="current"{% endif %}><a href="{{ site.baseurl }}/resources">Resources</a></li>
 							<li {% if current[1] == 'talks' %}class="current"{% endif %}><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
 							<li><a href="{{ site.url }}/ffkatas/index.html">Fitness Function Katas</a></li>
 							<li><a href="http://shop.oreilly.com/product/0636920080237.do">The Book</a></li>
